syntax = "proto3";

option go_package = "github.com/EmmanuelStan12/code-fusion/backend/internal/proto";

message ExecuteCodeRequest {
  string code = 1;
  string sessionId = 2;
  string contextId = 3;
}

message ExecuteCodeResponse {
  string sessionId = 1;
  string contextId = 2;
  string result = 3;
  bool success = 4;
  string stdout = 5;
  string error = 6;
}

service CodeExecutionService {
  rpc ExecuteCode(stream ExecuteCodeRequest) returns (stream ExecuteCodeResponse) {}
}